--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"prop-types": "^15.7.2",
 		"query-string": "^5.1.1",
 		"react": "^16.14.0",
+		"react-confetti": "^6.0.1",
 		"react-dom": "^16.14.0",
 		"react-polyfills": "0.0.1"
 	}
